src/test/ui/argument-suggestions/basic.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/basic.rs:20:5
   |
LL |     invalid(1.0);
   |     ^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/basic.rs:13:4
   |
LL | fn invalid(_i: u32) {}
   |    ^^^^^^^ -------
help: make these changes
   |
LL |     invalid({u32});
   |     ^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/basic.rs:21:5
   |
LL |     extra("");
   |     ^^^^^^^^^
   |
note: function defined here
  --> $DIR/basic.rs:14:4
   |
LL | fn extra() {}
   |    ^^^^^
help: make these changes
   |
LL |     extra();
   |     ^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/basic.rs:22:5
   |
LL |     missing();
   |     ^^^^^^^^^
   |
note: function defined here
  --> $DIR/basic.rs:15:4
   |
LL | fn missing(_i: u32) {}
   |    ^^^^^^^ -------
help: make these changes
   |
LL |     missing({u32});
   |     ^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/basic.rs:23:5
   |
LL |     swapped("", 1);
   |     ^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/basic.rs:16:4
   |
LL | fn swapped(_i: u32, _s: &str) {}
   |    ^^^^^^^ -------  --------
help: make these changes
   |
LL |     swapped(1, "");
   |     ^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/basic.rs:24:5
   |
LL |     permuted(Y {}, Z {}, X {});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/basic.rs:17:4
   |
LL | fn permuted(_x: X, _y: Y, _z: Z) {}
   |    ^^^^^^^^ -----  -----  -----
help: make these changes
   |
LL |     permuted(X {}, Y {}, Z {});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0059`.
